--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-favicon": "^2.0.4",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
